--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -3,7 +3,18 @@
   <configSections>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" />
   </configSections>
+  <connectionStrings>
+    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CakeTrafficContext" connectionString="data source=biz2\da;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+<!--
+    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalTest;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CakeTrafficContext" connectionString="data source=.\sql2;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+-->
+  </connectionStrings>
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
       <add name="Event Log Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="Enterprise Library Logging" formatter="Text Formatter" log="Application" machineName="." traceOutputOptions="None" />
@@ -40,12 +51,8 @@
     <add key="BingApiPassword" value="agentdan1" />
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
+    <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
   </appSettings>
-  <connectionStrings>
-    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalTest;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="CakeTrafficContext" connectionString="data source=.;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -104,4 +111,125 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <AdWordsApi>
+    <!--
+      This section contains the settings specific to AdWords and DoubleClick Ad
+      Exchange Buyer API DotNet Client Library. You can use the App.config /
+      Web.config for quickly configuring and running a simple application.
+      However, it is not mandatory to provide your settings in the config file,
+      you may also set or override these settings at runtime. See
+      https://code.google.com/p/google-api-adwords-dotnet/wiki/HowToUseAdWordsUser
+      for details.
+
+      You can refer to
+      https://code.google.com/p/google-api-adwords-dotnet/wiki/UnderstandingAppConfig
+      for detailed explanation of each configuration key.
+    -->
+
+    <!-- Settings related to SOAP logging. -->
+    <add key="LogPath" value="C:\Logs\"/>
+    <add key="LogToFile" value="false"/>
+    <add key="MaskCredentials" value="true"/>
+    <add key="LogErrorsOnly" value="true"/>
+
+    <!-- Settings related to general library behaviour. -->
+
+    <!-- Use this key to automatically retry a call that failed due to a
+         recoverable error like expired credentials. -->
+    <!-- <add key="RetryCount" value="1"/> -->
+
+    <!-- Set the service timeout in milliseconds. -->
+    <!-- <add key="Timeout" value="100000"/> -->
+
+    <!-- Use this key to enable or disable gzip compression in SOAP requests.-->
+    <add key="EnableGzipCompression" value="true"/>
+
+    <!-- Proxy settings for library. -->
+    <add key="ProxyServer" value=""/>
+    <add key="ProxyUser" value=""/>
+    <add key="ProxyPassword" value=""/>
+    <add key="ProxyDomain" value=""/>
+
+    <!-- Settings specific to AdWords API.-->
+    <add key="UserAgent" value="direct-agents-client-portal"/>
+    <add key="DeveloperToken" value="kEw3EPUPKDwKFpjRRIpm5Q"/>
+
+    <!-- If your application is a simple script that makes calls to only a
+         single Adwords account, then you can set your customer ID here. If you
+         have multiple customer IDs to deal with in your account, then you can
+         comment out this key and set the value at runtime by setting
+         ((AdWordsAppConfig) user.Config).ClientCustomerId = "xxx";
+    -->
+    <!--<add key="ClientCustomerId" value="707-036-4439"/>-->
+
+    <!-- Settings specific to use OAuth2 as authentication mechanism. You could
+         run Common\Util\OAuth2TokenGenerator.cs to generate this section of the
+         config file.
+    -->
+    <add key="AuthorizationMethod" value="OAuth2" />
+    <!-- Provide the OAuth2 client ID and secret. You can create one from
+         https://code.google.com/apis/console/. See
+         https://code.google.com/p/google-api-adwords-dotnet/wiki/UsingOAuth
+         for more details.
+    -->
+    <add key="OAuth2ClientId" value="596863405612.apps.googleusercontent.com" />
+    <add key="OAuth2ClientSecret" value="8qonZCA_oSenYehXTQ9Hcgxk" />
+
+    <!-- The following OAuth2 settings are optional. -->
+    <!-- Provide a different OAuth2 scope if required. Multiple scopes should be
+         separated by spaces. -->
+    <!-- <add key="OAuth2Scope" value="INSERT_OAUTH2_SCOPE_HERE" /> -->
+
+    <!-- Use the following keys if you want to use Web / Installed application
+         OAuth flow.-->
+
+    <add key="OAuth2Mode" value="APPLICATION" />
+    <!-- If you are using a single MCC account's credentials to make calls to
+         all your accounts, then you can run OAuth2TokenGenerator.cs to generate
+         a RefreshToken for that account and set this key in your application's
+         App.config / Web.config. If you are making calls to multiple unrelated
+         accounts, then you need to implement OAuth2 flow in your account and
+         set this key at runtime. See OAuth folder under Examples folder for a
+         web and a console application example.
+    -->
+    <add key="OAuth2RefreshToken" value="1/Frp86av8j0EBR276x606m0EitEeEwFzob377Whl0K0E" />
+
+    <!-- Optional: Specify an OAuth2 redirect url if you are building a
+         web application and implementing OAuth2 web flow in your application.
+    -->
+    <!-- <add key="OAuth2RedirectUri" value="" /> -->
+
+    <!-- Use the following keys if you want to use OAuth2 service account flow.
+         You should comment out all the keys for Web / Installed application
+         OAuth flow above. See
+         https://developers.google.com/adwords/api/docs/guides/service-accounts
+         and https://code.google.com/p/google-api-adwords-dotnet/wiki/UsingOAuth
+         for more details.
+    -->
+    <!--
+    <add key="OAuth2Mode" value="SERVICE_ACCOUNT" />
+    <add key="OAuth2ServiceAccountEmail"
+        value="INSERT_OAUTH2_SERVICE_ACCOUNT_EMAIL_HERE" />
+    <add key="OAuth2PrnEmail" value="INSERT_OAUTH2_USER_EMAIL_HERE" />
+    <add key="OAuth2JwtCertificatePath"
+        value="INSERT_OAUTH2_JWT_CERTIFICATE_PATH_HERE" />
+    <add key="OAuth2JwtCertificatePassword"
+        value="INSERT_OAUTH2_JWT_CERTIFICATE_PASSWORD_HERE" />
+    -->
+
+    <!-- Settings specific to use ClientLogin as authentication mechanism. -->
+    <!-- To use ClientLogin as authentication mechanism, uncomment the following
+         section and comment the OAuth2 section above. Keep in mind that
+         ClientLogin API is deprecated, and its use is strongly discouraged.
+         See https://developers.google.com/accounts/docs/AuthForInstalledApps
+         for details.-->
+    <!--
+    <add key="AuthorizationMethod" value="ClientLogin" />   
+    <add key="Email" value="aaron@directagents.com"/>
+    <add key="Password" value="Welcome2010"/>
+    -->
+    <!-- Optional: uncomment this if you want to reuse an authToken multiple
+         times. -->
+    <!-- <add key="AuthToken" value="INSERT_YOUR_AUTH_TOKEN_HERE"/> -->
+  </AdWordsApi>
 </configuration>
