BingAds- increase timeout, more logging

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -59,7 +59,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IReportingService">
+        <binding name="BasicHttpBinding_IReportingService" sendTimeout="00:03:00">
           <security mode="Transport" />
         </binding>
       </basicHttpBinding>
