--- a/3/BingAds/app.config
+++ b/3/BingAds/app.config
@@ -10,10 +10,10 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_ICampaignManagementService">
+        <binding name="BasicHttpBinding_ICampaignManagementService" sendTimeout="00:03:00">
           <security mode="Transport" />
         </binding>
-        <binding name="BasicHttpBinding_IReportingService">
+        <binding name="BasicHttpBinding_IReportingService" sendTimeout="00:03:00">
           <security mode="Transport" />
         </binding>
       </basicHttpBinding>
