--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -43,6 +43,9 @@
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
+
+    <add key="GoogleAPI_Certificate" value="271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
+    <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
   </appSettings>
   <connectionStrings>
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalTest;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
