--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -158,6 +158,9 @@
     <Compile Include="Contexts\GoalType.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\GoogleAnalyticsSummary.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\Metric.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
