--- a/3/LineCommander/App.config
+++ b/3/LineCommander/App.config
@@ -55,6 +55,9 @@
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
+
+    <add key="GoogleAPI_Certificate" value="271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
+    <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
   </appSettings>
   <system.serviceModel>
     <bindings>
