--- a/3/LineCommander/App.config
+++ b/3/LineCommander/App.config
@@ -47,6 +47,10 @@
     </specialSources>
   </loggingConfiguration>
   <appSettings>
+    <add key="PortalEmail" value="portal@directagent.com" />
+
+    <add key="GmailEmailer_Username" value="portal@directagents.com" />
+    <add key="GmailEmailer_Password" value="Welcomenew1" />
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="BingApiToken" value="EW65911AO" />
