--- a/2/Huggies/Huggies.Web/Web.config
+++ b/2/Huggies/Huggies.Web/Web.config
@@ -3,13 +3,14 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
+
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Context" connectionString="Data Source=.;Initial Catalog=Huggies;User=sa;Password=sp0ngbOb" providerName="System.Data.SqlClient" />
+    <add name="Context" connectionString="Data Source=biz2\da;Initial Catalog=Huggies;User=sa;Password=sp0ngbOb" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
