final SearchAccounts updates

--- a/3/ClientPortal.Web/ClientPortal.Web/Web.Debug.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.Debug.config
@@ -17,6 +17,10 @@
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
+  <appSettings>
+    <add key="PortalUrl" value="http://test.portal.directagents.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
+
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
