--- a/3/ClientPortal.Web/ClientPortal.Web/Web.Release.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.Release.config
@@ -8,11 +8,15 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an atrribute "name" that has a value of "MyDB".
   -->    
-    <connectionStrings>
-      <add name="CakeContext" 
-        connectionString="metadata=res://*/Contexts.Cake.csdl|res://*/Contexts.Cake.ssdl|res://*/Contexts.Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;User ID=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
+  <connectionStrings>
+    <add name="CakeContext"
+      connectionString="metadata=res://*/Contexts.Cake.csdl|res://*/Contexts.Cake.ssdl|res://*/Contexts.Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;User ID=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+
+  <appSettings>
+    <add key="PortalUrl" value="https://portal.directagents.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
 
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
