--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Contexts\Campaign.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\CampaignDrop.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\ClientPortal.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -106,6 +109,9 @@
     </Compile>
     <Compile Include="Contexts\ConversionsByRegion.cs">
       <DependentUpon>ClientPortalDW.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Contexts\CreativeStat.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
     <Compile Include="Contexts\DailySummary.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
@@ -224,11 +230,15 @@
     <Compile Include="DTOs\SearchStat.cs" />
     <Compile Include="DTOs\WeeklySearchStat.cs" />
     <Compile Include="Entities\Advertiser.cs" />
+    <Compile Include="Entities\CampaignDrop.cs" />
     <Compile Include="Entities\Contact.cs" />
+    <Compile Include="Entities\CreativeStat.cs" />
     <Compile Include="Entities\Goal.cs" />
+    <Compile Include="Entities\Offer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClientPortalRepository.cs" />
     <Compile Include="Services\SearchRepository.cs" />
+    <Compile Include="Services\StatsRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
