--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="net45" />
+  <package id="morelinq" version="1.0.16006" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
