--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -196,6 +196,8 @@
     <Compile Include="CakeMarketingApi\Clients\AdvertisersRequest.cs" />
     <Compile Include="CakeMarketingApi\Clients\CampaignsClient.cs" />
     <Compile Include="CakeMarketingApi\Clients\CampaignsRequest.cs" />
+    <Compile Include="CakeMarketingApi\Clients\CreativesClient.cs" />
+    <Compile Include="CakeMarketingApi\Clients\CreativesRequest.cs" />
     <Compile Include="CakeMarketingApi\Entities\AdvertiserExportResponse.cs" />
     <Compile Include="CakeMarketingApi\Clients\AdvertisersClient.cs" />
     <Compile Include="CakeMarketingApi\Clients\ApiClient.cs" />
@@ -218,6 +220,9 @@
     <Compile Include="CakeMarketingApi\Entities\Conversion.cs" />
     <Compile Include="CakeMarketingApi\Entities\ConversionReportResponse.cs" />
     <Compile Include="CakeMarketingApi\Entities\Country.cs" />
+    <Compile Include="CakeMarketingApi\Entities\Creative.cs" />
+    <Compile Include="CakeMarketingApi\Entities\CreativeExportResponse.cs" />
+    <Compile Include="CakeMarketingApi\Entities\CreativeType.cs" />
     <Compile Include="CakeMarketingApi\Entities\Currency.cs" />
     <Compile Include="CakeMarketingApi\Entities\DateRangeTraffic.cs" />
     <Compile Include="CakeMarketingApi\Entities\Device.cs" />
@@ -236,6 +241,7 @@
     <Compile Include="Commands\SynchConversionsCommand.cs" />
     <Compile Include="Commands\SynchCakeTrafficCommand.cs" />
     <Compile Include="Commands\SynchClicksCommand.cs" />
+    <Compile Include="Commands\SynchCreativesCommand.cs" />
     <Compile Include="Commands\SynchOffersCommand.cs" />
     <Compile Include="Commands\SynchSearchDailySummariesAdWordsCommand.cs" />
     <Compile Include="Commands\SynchSearchDailySummariesAnalyticsCommand.cs" />
@@ -275,6 +281,7 @@
     <Compile Include="Etl\CakeMarketing\Extracters\CampaignsExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\ClicksExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\ConversionsExtracter.cs" />
+    <Compile Include="Etl\CakeMarketing\Extracters\CreativesExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\OffersExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\TrafficExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\DailySummariesExtracter.cs" />
@@ -284,6 +291,7 @@
     <Compile Include="Etl\CakeMarketing\Loaders\ClicksLoader.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\ClicksLoader2.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\ConversionsLoader.cs" />
+    <Compile Include="Etl\CakeMarketing\Loaders\CreativesLoader.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\OffersLoader.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\TrafficLoader.cs" />
     <Compile Include="Etl\ILoader.cs" />
