--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Areas\Admin\Controllers\CampaignDropsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CampaignsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ContactsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CreativeStatsController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\OffersController.cs" />
     <Compile Include="Areas\Admin\Models\ContactVM.cs" />
@@ -640,6 +641,7 @@
     <Content Include="Areas\Admin\Views\Shared\DisplayTemplates\Date.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\DisplayTemplates\Money.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\EditorTemplates\CreativeDropDown.cshtml" />
+    <Content Include="Areas\Admin\Views\CreativeStats\Create.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
