--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -116,6 +116,9 @@
     <Compile Include="Contexts\CreativeStat.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\CreativeSummary.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\CreativeType.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
