--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Areas\Admin\Controllers\CampaignDropsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CampaignsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ContactsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CPMReportsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CreativesController.cs" />
     <Compile Include="Areas\Admin\Controllers\CreativeStatsController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
@@ -645,6 +646,10 @@
     <Content Include="Areas\Admin\Views\CreativeStats\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Creatives\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Creatives\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\CPMReports\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\CPMReports\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\CPMReports\Show.cshtml" />
+    <Content Include="Areas\Admin\Views\CPMReports\Edit.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
