--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -122,6 +122,9 @@
     <Compile Include="Contexts\Creative.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\CreativeFile.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\CreativeStat.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
